PostGIS 2.5.6dev
YYYY/MM/DD

 * Bug fixes *

  - #4757, Handle line collapse due to snap-to-existing node (Sandro Santilli)

PostGIS 2.5.5
2020/08/15

 * Bug fixes *

  - #4709, Fix crash in adding edge to corrupted topology, (Sandro Santilli)
  - Handle non-closed edge rings by human readable error (Sandro Santilli)
  - #4706, Fix crash in ST_ChangeEdgeGeom on corrupted topology (Sandro Santilli)
  - #4652, Fix several memory related bugs in ST_GeomFromGML (Raúl Marín)
  - #4661,4129, Fix access to spatial_ref_sys with a non default schema (Raúl Marín)
  - #4670, ST_AddPoint: Fix bug when a positive position is requested (Raúl Marín)
  - #4699, crash on null input to ST_Union(raster, otherarg) (Jaime Casanova, 2ndQuadrant)
  - #4691, Fix segfault during gist index creation with empty geometries (Raúl Marín)
  - #4541, ST_ConcaveHull returns a "geometrycollection"
           type instead of the expected "polygon" (Regina Obe)

PostGIS 2.5.4
2020/02/28

 * Bug fixes *

  - #4480, Geography Distance inconsistent with Intersects (Paul Ramsey)
  - #4481, Improve libprotobuf detection for old systems (Paul Ramsey)
  - #4475, Avoid reading into empty ptarray (Paul Ramsey)
  - #4492, Fix ST_Simplify ignoring the value of the 3rd parameter (Raúl Marín)
  - #4494, Fix ST_Simplify output having an outdated bbox (Raúl Marín)
  - #4493, Fix ST_RemoveRepeatedPoints output having an outdated bbox (Raúl Marín)
  - #4495, Fix ST_SnapToGrid output having an outdated bbox (Raúl Marín)
  - #4496, Make ST_Simplify(TRIANGLE) collapse if requested (Raúl Marín)
  - #4506, Remove tolerance in point-in-ring tests (Paul Ramsey)
  - #4338, Fix Census block level data (tabblock table) loading (Regina Obe)
  - #4519, Fix getSRIDbySRS crash (Raúl Marín)
  - #4517, Documentation error ST_EndPoint (Samuel Spurling)
  - #4530, Avoid bogus AddRasterConstraint in upgrade tests (Sandro Santilli)
  - #4534, Fix leak in lwcurvepoly_from_wkb_state (Raúl Marín)